// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map Container renders map container 1`] = `
<div
  className="slds-grid"
>
  <div
    className="slds-map_container"
  >
    <div
      className="slds-map"
    >
      <iframe
        id="GoogleMapID"
        src="https://www.google.com/maps/embed/v1/place?q=1%20market%2C%20san%20francisco&key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc"
        title="Google Maps iframe"
      />
    </div>
  </div>
</div>
`;

exports[`Map Container renders map container with coordinates 1`] = `
<div
  className="slds-grid slds-has-coordinates"
>
  <div
    className="slds-map_container"
  >
    <div
      className="slds-map"
    >
      <iframe
        id="GoogleMapID"
        src="https://www.google.com/maps/embed/v1/place?q=1%20market%2C%20san%20francisco&key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc"
        title="Google Maps iframe"
      />
    </div>
  </div>
  <div
    className="slds-coordinates"
  >
    <div
      className="slds-coordinates__header"
    >
      <h2
        className="slds-coordinates__title"
      />
    </div>
    <ul
      className="slds-coordinates__list"
    >
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              Worldwide Corporate Headquarters
            </span>
            <span>
              The Landmark @ One Market, San Francisco, CA
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Atlanta
            </span>
            <span>
              950 East Paces Ferry Road NE, Atlanta, GA
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Bellevue
            </span>
            <span>
              929 108th Ave NE, Bellevue, WA
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Boston
            </span>
            <span>
              500 Boylston Street 19th Floor, Boston, MA
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Chicago
            </span>
            <span>
              111 West Illinois Street, Chicago, IL
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Herndon
            </span>
            <span>
              2550 Wasser Terrace, Herndon, VA
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Hillsboro
            </span>
            <span>
              2035 NE Cornelius Pass Road, Hillsboro, OR
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Indy
            </span>
            <span>
              111 Monument Circle, Indianapolis, IN
            </span>
          </span>
        </button>
      </li>
      <li
        className="slds-coordinates__item"
      >
        <span
          aria-live="polite"
          className="slds-assistive-text"
        />
        <button
          aria-pressed={false}
          className="slds-coordinates__item-action slds-button_reset slds-media"
        >
          <span
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-account"
              title="Description of icon when needed"
            >
              <svg
                aria-hidden={true}
                className="slds-icon"
              >
                <use
                  xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Description of icon when needed
              </span>
            </span>
          </span>
          <span
            className="slds-media__body"
          >
            <span
              className="slds-text-link"
            >
              salesforce.com inc Irvine
            </span>
            <span>
              300 Spectrum Center Drive, Irvine, CA
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Map Container renders map container with heading text 1`] = `
<div
  className="slds-grid"
>
  <div
    className="slds-map_container"
  >
    <div
      className="slds-map"
    >
      <iframe
        id="GoogleMapID"
        src="https://www.google.com/maps/embed/v1/place?q=1%20market%2C%20san%20francisco&key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc"
        title="Google Maps iframe"
      />
    </div>
  </div>
</div>
`;

exports[`Map Container renders map container with selected coordinate 1`] = `
<div
  className="slds-grid"
>
  <div
    className="slds-map_container"
  >
    <div
      className="slds-map"
    >
      <iframe
        id="GoogleMapID"
        src="https://www.google.com/maps/embed/v1/place?q=1%20market%2C%20san%20francisco&key=AIzaSyDliLquGXGts9S8YtkWVolSQEJdBL1ZuWc"
        title="Google Maps iframe"
      />
    </div>
  </div>
</div>
`;

exports[`renders a map component modal 1`] = `
<div
  style={
    Object {
      "height": "900px",
    }
  }
>
  <section
    aria-labelledby="modal-heading-id-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <button
        className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-button__icon_large"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Cancel and close
        </span>
      </button>
      <div
        className="slds-modal__header"
      >
        <h1
          className="slds-text-heading_medium slds-hyphenate"
          id="modal-heading-id-01"
        >
          Address: 1 Market St, San Francisco, CA 94105
        </h1>
      </div>
      <div
        className="slds-modal__content"
        id="modal-content-id-01"
      >
        <div
          className="slds-grid"
        >
          <div
            className="slds-map_container"
          >
            <div
              className="slds-map"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
  <div
    className="slds-backdrop slds-backdrop_open"
  />
</div>
`;

exports[`renders a map component modal with coordinates panel 1`] = `
<div
  style={
    Object {
      "height": "900px",
    }
  }
>
  <section
    aria-labelledby="modal-heading-id-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <button
        className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-button__icon_large"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Cancel and close
        </span>
      </button>
      <div
        className="slds-modal__header"
      >
        <h1
          className="slds-text-heading_medium slds-hyphenate"
          id="modal-heading-id-01"
        >
          Favorite Solar Companies (2)
        </h1>
      </div>
      <div
        className="slds-modal__content"
        id="modal-content-id-01"
      >
        <div
          className="slds-grid slds-has-coordinates"
        >
          <div
            className="slds-map_container"
          >
            <div
              className="slds-map"
            />
          </div>
          <div
            className="slds-coordinates"
          >
            <div
              className="slds-coordinates__header"
            >
              <h2
                className="slds-coordinates__title"
              >
                Favorite Solar Companies (2)
              </h2>
            </div>
            <ul
              className="slds-coordinates__list"
            >
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      Worldwide Corporate Headquarters
                    </span>
                    <span>
                      The Landmark @ One Market, San Francisco, CA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Atlanta
                    </span>
                    <span>
                      950 East Paces Ferry Road NE, Atlanta, GA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Bellevue
                    </span>
                    <span>
                      929 108th Ave NE, Bellevue, WA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Boston
                    </span>
                    <span>
                      500 Boylston Street 19th Floor, Boston, MA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Chicago
                    </span>
                    <span>
                      111 West Illinois Street, Chicago, IL
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Herndon
                    </span>
                    <span>
                      2550 Wasser Terrace, Herndon, VA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Hillsboro
                    </span>
                    <span>
                      2035 NE Cornelius Pass Road, Hillsboro, OR
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Indy
                    </span>
                    <span>
                      111 Monument Circle, Indianapolis, IN
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Irvine
                    </span>
                    <span>
                      300 Spectrum Center Drive, Irvine, CA
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_brand"
        >
          Open in Google Maps
        </button>
      </div>
    </div>
  </section>
  <div
    className="slds-backdrop slds-backdrop_open"
  />
</div>
`;

exports[`renders a map component modal with first coordinate selected 1`] = `
<div
  style={
    Object {
      "height": "900px",
    }
  }
>
  <section
    aria-labelledby="modal-heading-id-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <button
        className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-button__icon_large"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Cancel and close
        </span>
      </button>
      <div
        className="slds-modal__header"
      >
        <h1
          className="slds-text-heading_medium slds-hyphenate"
          id="modal-heading-id-01"
        >
          Favorite Solar Companies (2)
        </h1>
      </div>
      <div
        className="slds-modal__content"
        id="modal-content-id-01"
      >
        <div
          className="slds-grid slds-has-coordinates"
        >
          <div
            className="slds-map_container"
          >
            <div
              className="slds-map"
            />
          </div>
          <div
            className="slds-coordinates"
          >
            <div
              className="slds-coordinates__header"
            >
              <h2
                className="slds-coordinates__title"
              >
                Favorite Solar Companies (2)
              </h2>
            </div>
            <ul
              className="slds-coordinates__list"
            >
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                >
                  Worldwide Corporate Headquarters is currently selected
                </span>
                <button
                  aria-pressed={true}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      Worldwide Corporate Headquarters
                    </span>
                    <span>
                      The Landmark @ One Market, San Francisco, CA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Atlanta
                    </span>
                    <span>
                      950 East Paces Ferry Road NE, Atlanta, GA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Bellevue
                    </span>
                    <span>
                      929 108th Ave NE, Bellevue, WA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Boston
                    </span>
                    <span>
                      500 Boylston Street 19th Floor, Boston, MA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Chicago
                    </span>
                    <span>
                      111 West Illinois Street, Chicago, IL
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Herndon
                    </span>
                    <span>
                      2550 Wasser Terrace, Herndon, VA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Hillsboro
                    </span>
                    <span>
                      2035 NE Cornelius Pass Road, Hillsboro, OR
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Indy
                    </span>
                    <span>
                      111 Monument Circle, Indianapolis, IN
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Irvine
                    </span>
                    <span>
                      300 Spectrum Center Drive, Irvine, CA
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_brand"
        >
          Open in Google Maps
        </button>
      </div>
    </div>
  </section>
  <div
    className="slds-backdrop slds-backdrop_open"
  />
</div>
`;

exports[`renders a map component modal with footer 1`] = `
<div
  style={
    Object {
      "height": "900px",
    }
  }
>
  <section
    aria-labelledby="modal-heading-id-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <button
        className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-button__icon_large"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Cancel and close
        </span>
      </button>
      <div
        className="slds-modal__header"
      >
        <h1
          className="slds-text-heading_medium slds-hyphenate"
          id="modal-heading-id-01"
        >
          Geo Code: 37°48'08.3"N 122°15'55.2W
        </h1>
      </div>
      <div
        className="slds-modal__content"
        id="modal-content-id-01"
      >
        <div
          className="slds-grid"
        >
          <div
            className="slds-map_container"
          >
            <div
              className="slds-map"
            />
          </div>
        </div>
      </div>
      <div
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_brand"
        >
          Open in Google Maps
        </button>
      </div>
    </div>
  </section>
  <div
    className="slds-backdrop slds-backdrop_open"
  />
</div>
`;

exports[`renders a map component modal with second coordinate selected 1`] = `
<div
  style={
    Object {
      "height": "900px",
    }
  }
>
  <section
    aria-labelledby="modal-heading-id-01"
    aria-modal="true"
    className="slds-modal slds-fade-in-open slds-modal_medium"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="slds-modal__container"
    >
      <button
        className="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="slds-button__icon slds-button__icon_large"
        >
          <use
            xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Cancel and close
        </span>
      </button>
      <div
        className="slds-modal__header"
      >
        <h1
          className="slds-text-heading_medium slds-hyphenate"
          id="modal-heading-id-01"
        >
          Favorite Solar Companies (2)
        </h1>
      </div>
      <div
        className="slds-modal__content"
        id="modal-content-id-01"
      >
        <div
          className="slds-grid slds-has-coordinates"
        >
          <div
            className="slds-map_container"
          >
            <div
              className="slds-map"
            />
          </div>
          <div
            className="slds-coordinates"
          >
            <div
              className="slds-coordinates__header"
            >
              <h2
                className="slds-coordinates__title"
              >
                Favorite Solar Companies (2)
              </h2>
            </div>
            <ul
              className="slds-coordinates__list"
            >
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      Worldwide Corporate Headquarters
                    </span>
                    <span>
                      The Landmark @ One Market, San Francisco, CA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                >
                  salesforce.com inc Atlanta is currently selected
                </span>
                <button
                  aria-pressed={true}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Atlanta
                    </span>
                    <span>
                      950 East Paces Ferry Road NE, Atlanta, GA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Bellevue
                    </span>
                    <span>
                      929 108th Ave NE, Bellevue, WA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Boston
                    </span>
                    <span>
                      500 Boylston Street 19th Floor, Boston, MA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Chicago
                    </span>
                    <span>
                      111 West Illinois Street, Chicago, IL
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Herndon
                    </span>
                    <span>
                      2550 Wasser Terrace, Herndon, VA
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Hillsboro
                    </span>
                    <span>
                      2035 NE Cornelius Pass Road, Hillsboro, OR
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Indy
                    </span>
                    <span>
                      111 Monument Circle, Indianapolis, IN
                    </span>
                  </span>
                </button>
              </li>
              <li
                className="slds-coordinates__item"
              >
                <span
                  aria-live="polite"
                  className="slds-assistive-text"
                />
                <button
                  aria-pressed={false}
                  className="slds-coordinates__item-action slds-button_reset slds-media"
                >
                  <span
                    className="slds-media__figure"
                  >
                    <span
                      className="slds-icon_container slds-icon-standard-account"
                      title="Description of icon when needed"
                    >
                      <svg
                        aria-hidden={true}
                        className="slds-icon"
                      >
                        <use
                          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                      <span
                        className="slds-assistive-text"
                      >
                        Description of icon when needed
                      </span>
                    </span>
                  </span>
                  <span
                    className="slds-media__body"
                  >
                    <span
                      className="slds-text-link"
                    >
                      salesforce.com inc Irvine
                    </span>
                    <span>
                      300 Spectrum Center Drive, Irvine, CA
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="slds-modal__footer"
      >
        <button
          className="slds-button slds-button_brand"
        >
          Open in Google Maps
        </button>
      </div>
    </div>
  </section>
  <div
    className="slds-backdrop slds-backdrop_open"
  />
</div>
`;
